--- a/public/template/user/user-edit.html
+++ b/public/template/user/user-edit.html
@@ -1,3 +1,4 @@
+<div ng-controller="userEditCtrl">
 <div class="case">
     <header>编辑</header>
     <p>
@@ -64,3 +65,4 @@
         }
     });
 </script>
+</div>
