--- a/public/template/user/user-follow.html
+++ b/public/template/user/user-follow.html
@@ -1,4 +1,4 @@
-<div class="case clearfloat">
+<div class="case clearfloat" ng-controller="userFollowCtrl">
     <header>已关注</header>
     <p>
         <ul class="user-group follow">
@@ -9,6 +9,6 @@
                 <p class="text-center">{{user.nick}}</p>
             </li>
         </ul>
-        <button class="btn right" ng-show="follow.length>30" ng-click="getFollow(followSkip+30)">更多</button>
+        <button class="btn right" ng-show="follows.length>20" ng-click="getFollow(skip+1)">更多</button>
     </p>
 </div>
