--- a/public/template/user/user-post.html
+++ b/public/template/user/user-post.html
@@ -1,15 +1,27 @@
 <div class="case">
     <header>最近发表</header>
-    <p ng-repeat="topic in userData.post.topic">
-        发表了主题:<br/><a href="{{topic.parent_url}}/{{topic._id}}/{{topic.title}}" target="_blank">{{topic.title}}</a>
-    </p>
+    <div ng-repeat="topic in userData.post.topic">
+        发表了主题:<br/>
+        <a href="{{topic.parent_url}}/{{topic._id}}/{{topic.title}}" target="_blank">{{topic.title}}</a>
+        <footer class="right">
+            <small>{{topic.createDate|dateCustom}}</small>
+        </footer>
+    </div>
 </div>
-<div class="case">
+<div class="case clearfloat">
     <header>最近参与</header>
-    <p ng-repeat="comment in userData.post.comment">
+    <div ng-repeat="comment in userData.post.comment">
         在<a href="{{comment.post_id.parent_url}}/{{comment.post_id._id}}/{{comment.post_id.title}}" target="_blank">
-        {{comment.post_id.title}}</a>发表回复:<br/>
-        <a href="{{comment.post_id.parent_url}}/{{comment.post_id._id}}/{{comment.post_id.title}}?scrollTo={{comment._id}}"
-           target="_blank" compile="comment.content"></a>
-        </a></p>
+        {{comment.post_id.title}}</a>发表回复:
+        <div compile="comment.content"></a>
+        </div>
+        <footer class="right">
+            <small>{{comment.createDate|dateCustom}}</small>
+            -
+            <small>
+                <a href="{{comment.post_id.parent_url}}/{{comment.post_id._id}}/{{comment.post_id.title}}?scrollTo={{comment._id}}"
+                   target="_blank">详情</a>
+            </small>
+        </footer>
+    </div>
 </div>
