--- a/public/css/common.css
+++ b/public/css/common.css
@@ -988,6 +988,7 @@ form .field label {
 .beian {
     text-align: center;
     position: relative;
+    clear: both;
 }
 .beian a {
     color: #fff;
